--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <h1>Homepage</h1>
-<form method="GET" action="/search">
-    <input>
+<form method="GET" action="/results">
+    <input name="name">
+    <button type="submit">Search</button>
 </form>
