--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,1 +1,10 @@
 <h1>Search Page</h1>
+<h2>
+<%= badCharacter.name %>
+</h2>
+<img src= "<%= badCharacter.img %>"> 
+<form method="POST" action="/characters">
+    <input type="hidden" name="char_id" value="<%= badCharacter.char_id %>">
+    <input type="hidden" name="name" value="<%= badCharacter.name%>">
+    <input type="submit" value="Add to favorites">
+</form>
