--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,6 +1,6 @@
 <h1> Login Page </h1>
 
-<form method="POST" method="/auth/login">
+<form method="POST" method="users/login">
     <label for="user">Username:</label>
     <input type="text" name="username" id="user">
     <br>
@@ -9,3 +9,5 @@
     <br>
     <input type="submit" value="Log in">
 </form>
+
+<%= errors  %> 
