--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,6 +1,6 @@
 <h1> Sign Up</h1>
 
-<form method="POST" action="/auth">
+<form method="POST" action="users/login">
     <label for="username-input">Username:</label>
     <input type="text" name="username" id="username-input">
     <br>
