--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,17 @@
 <nav>
-    <a href="/">Homepage</a>
-    <a href="/users/login">Login</a>
-    <a href="/users/new">Sign Up</a>
-    <a href="/users/logout">Log Out</a>
-
+    <div>
+        <!-- <a href="/">Homepage</a>
+        <a href="/users/login">Login</a>
+        <a href="/users/new">Sign Up</a>
+        <a href="/users/logout">Log Out</a> -->
+    </div>
+    <div>
+        <% if(user) { %>
+            <h4><%= user.username %></h4>
+            <a href="/users/logout">Log Out</a>    
+        <% } else { %>
+            <a href="/users/login">Login</a>
+            <a href="users/new">Sign up</a>
+        <% } %>
+    </div>
 </nav>
